chore: Update CI

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -6,9 +6,10 @@ jobs:
   integration:
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x, 18.x, 20.x]
 
     steps:
       - uses: actions/checkout@v2
